use pug as src instead of html

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,67 +1,8 @@
-/* --------------------- CUSTOM PROPERTIES ------------------------- */
-:root {
-    --color-secondary: #0aa7f5;
-    --color-logo: #429bfc;
-    --color-gray-light: #f7f7f8;
-    --color-danger: #9e2215;
-    --color-onBlue: #d9f0fc;
-    --color-blue: #0d59f2;
-    --color-modal-background: #f1f2f4;
-    --color-modal-background-light: #f7f7f8;
-}
-
-/* --------------------- UTILITY ------------------------- */
-
-.mt-small {
-    margin-top: 1rem !important;
-}
-
-.mb-small {
-    margin-bottom: 1rem !important;
-}
-
-.mt-medium {
-    margin-top: 2rem !important;
-}
-
-.mb-medium {
-    margin-bottom: 2rem !important;
-}
-
-.mt-large {
-    margin-top: 4rem !important;
-}
-
-.mb-large {
-    margin-bottom: 4rem !important;
-}
-
-/* --------------------- RESETS ------------------------- */
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
-
-html {
-    box-sizing: inherit;
-    font-size: 62.5%; /*62.5 of 16px (browser default) = 10px = 1rem  */
-    font-weight: 400;
-    line-height: 1.5;
-    font-family: 'Mulish', sans-serif;
-}
-
-body {
-    font-size: 1.6rem;
-    position: relative;
-}
-
-button {
-    outline: none;
-    border: none;
-    cursor: pointer;
-}
+@import url("./_base.scss");
+@import url("./_components.scss");
+@import url("./_layout.scss");
+@import url("./_typography.scss");
+@import url("./_utilities.scss");
 
 /* --------------------- CHECKOUT ------------------------- */
 
@@ -642,88 +583,6 @@ button {
 
 #card-frame {
     grid-column: 1 / -1;
-}
-
-/* --------------------- Header ------------------------- */
-
-.container, 
-.header__content,
-.footer__content {
-    width: 60vw;
-    margin: 0 auto;
-}
-
-.container {
-    min-height: 84vh;
-    position: relative;
-
-    transform: translateY(10rem);
-}
-
-.header__content {
-    display: flex;
-    justify-content: space-between;
-}
-
-.header {
-    padding: 2.5rem;
-    /* border-bottom: solid 1px #ddd; */
-    box-shadow: 0 0 4rem rgba(0, 0, 0, .05);
-    background-color: #fff;
-
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-
-    z-index: 100;
-}
-
-.header__logo {
-    outline: none;
-    font-weight: 700;
-    font-size: 2.4rem;
-
-    display: flex;
-    align-items: center;
-    
-    text-decoration: none;
-    color: #000;
-}
-
-.header__buttons {
-    color: #fff;
-}
-
-.header__img {
-    width: 2.5rem;
-    height: 2.5rem;
-    margin-right: 5px;
-}
-
-.header__cart {
-    display: flex;
-    align-items: center;
-
-    outline: none;
-    border: none;
-    background-color: #fff;
-
-    padding: 2rem;
-    cursor: pointer;
-}
-
-.header__price {
-    color: #0aa7f5;
-    font-weight: 700;
-    font-size: 1.6rem;
-    letter-spacing: 2px;
-}
-
-.header__cart-img {
-    height: 3.1rem;
-    width: 2.7rem;
-    margin-right: 1rem;
 }
 
 /* --------------------- CARD ------------------------- */
