separated index page into multiple files

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,155 +1,13 @@
 doctype html
-head
-  meta(charset='UTF-8')
-  meta(http-equiv='X-UA-Compatible' content='IE=edge')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title Replica Zone - Demo online store
-  link(rel='shortcut icon' href='./img/logo.svg' type='image/svg+xml')
-  link(rel='preconnect' href='https://fonts.gstatic.com')
-  link(href='https://fonts.googleapis.com/css2?family=Mulish:wght@200;400;700&display=swap' rel='stylesheet')
-  script(src='https://js.yoco.com/sdk/v1/yoco-sdk-web.js')
-  link(rel='stylesheet' href='./css/index.scss')
+include includes/components/_head
 .overlay.hidden
-.checkout.checkout--hidden
-  .checkout__container
-    button.checkout__btn-back
-      svg
-        use(xlink:href='./img/arrow.svg#arrow')
-      |  Continue shopping
-    .checkout__left
-      .summary.summary--billing.hidden
-        .summary__check
-          svg
-            use(xlink:href='./img/tick.svg#tick')
-        h6.checkout__heading.summary__heading Billing
-        button.summary__btn-edit.summary__btn-edit--billing Edit
-        .summary__person
-          svg.summary__icon
-            use(xlink:href='./img/person.svg#person')
-          span.name
-          span.email
-        .summary__address
-          svg.summary__icon
-            use(xlink:href='./img/location.svg#location')
-          span.street
-          span.city
-      form.numbered-step.numbered-step--form.numbered-step--form--billing.checkout__form.checkout__form--billing(action='')
-        h6.checkout__heading Billing
-        .checkout__form-group.checkout__fullname
-          label(for='#billing-fullname') Full name
-          input#billing-fullname(type='text' name='fullname' required='')
-        .checkout__form-group.checkout__email
-          label(for='#billing-email') Email
-          input#billing-email(type='email' name='email' required='')
-        .checkout__form-group.checkout__province
-          label(for='#billing-province') Province
-          input#billing-province(type='text' name='province')
-        .checkout__form-group.checkout__city
-          label(for='#billing-city') City
-          input#billing-city(type='text' name='city' required='')
-        .checkout__form-group.checkout__street
-          label(for='#billing-street') Street address
-          input#billing-street(type='text' name='street' required='')
-        .checkout__form-group.checkout__zipcode
-          label(for='#billing-zipcode') Postal/ZIP code
-          input#billing-zipcode(type='text' name='zipcode')
-        .checkout__form-group.checkout__useshipping
-          label(for='#useshipping') Use as shipping address
-          input#useshipping(type='checkbox' name='useshipping' checked='')
-        button.btn-cta.mt-small(type='submit')
-          .spinner.hidden
-          span  Continue to shipping 
-      .numbered-step.step-next.step-next--shipping
-        h6.checkout__heading.summary__heading Shipping
-      form.numbered-step.numbered-step--form.numbered-step--form--shipping.checkout__form.checkout__form--shipping.hidden(action='')
-        h6.checkout__heading Shipping
-        .checkout__form-group.checkout__province
-          label(for='#shipping__province') Province
-          input#shipping__province(type='text' name='province')
-        .checkout__form-group.checkout__city
-          label(for='#shipping__city') City
-          input#shipping__city(type='text' name='city' required='')
-        .checkout__form-group.checkout__street
-          label(for='#shipping__street') Street address
-          input#shipping__street(type='text' name='street' required='')
-        .checkout__form-group.checkout__zipcode
-          label(for='#shipping__zipcode') Postal/ZIP code
-          input#shipping__zipcode(type='text' name='zipcode')
-        button.btn-cta.mt-small(type='submit')
-          .spinner.hidden
-          span  Continue to Payment 
-      .summary.summary--shipping.hidden
-        .summary__check
-          svg
-            use(xlink:href='./img/tick.svg#tick')
-        h6.checkout__heading.summary__heading Shipping
-        button.summary__btn-edit.summary__btn-edit--shipping Edit
-        .summary__address
-          svg.summary__icon
-            use(xlink:href='./img/location.svg#location')
-          span.street
-          span.city
-        .summary__person
-          svg.summary__icon
-            use(xlink:href='./img/box.svg#box')
-          span.shipping Free shipping!
-      .numbered-step.step-next.step-next--payment
-        h6.checkout__heading.summary__heading Payment
-      form#payment-form.checkout__form.hidden(method='POST')
-        #card-frame
-          // Yoco Inline form will be added here
-        button#pay-button.btn-cta.mt-small.btn-complete-payment.hidden
-          .spinner.hidden
-          span
-      button.btn-cta.mt-small.btn-payment-completed.hidden
-        span.text-completed Payment successfuly Completed!
-        span.text-continue
-          svg
-            use(xlink:href='./img/arrow.svg#arrow')
-          |  Continue shopping
-    .checkout__right
-      .order-summary
-        h6.checkout__heading Order Summary
-        button.summary__btn-edit.summary__btn-edit--order Edit
-        .order__items
-        .order__total
-          | Total 
-          span
-.cart-summary.cart-summary--hidden
-  h3.cart-summary__header
-    | Cart Summary
-    button.cart-summary-close-btn
-      img.cart-summary-close-img(src='./img/cross.svg' alt='')
-  .cart-summary__items
-  .cart-summary__buttons
-    .cart-summary__total.mb-small
-      | Total 
-      span.cart-summary__value
-    button.btn.btn-cta.btn-checkout.mb-medium
-      | Checkout 
-      svg.btn-cta__icon
-        use(xlink:href='./img/arrow.svg#arrow')
-    button.btn.btn-detailed-cart View detailed cart
-header.header
-  .header__content
-    a.header__logo(href='#')
-      svg
-        use(xlink:href='./img/sprite.svg#logo')
-      |           ReplicaZone
-    .header__buttons
-      button.header__cart
-        svg
-          use(xlink:href='./img/sprite.svg#cart')
-        span.header__price
-          | R
-          span.header__value
+include includes/pages/_checkout
+include includes/components/_cart-summary
+include includes/components/_header
 main.container
   .loader-container
     .loader
       .blob.blob--1
       .blob.blob--2
-footer.footer
-  .footer__content
-    | Written by Thabiso Magwaza. A replica of the ReplicaZone Demo by
-    | Snipcart. &copy; 2021
+include includes/components/_footer
 script(src='./js/index.js')
