separated sass component styles

--- a/src/css/_components.scss
+++ b/src/css/_components.scss
@@ -1,69 +1,2 @@
-// BUTTONS
-button {
-    outline: none;
-    border: none;
-    cursor: pointer;
-}
-
-// HEADER
-.header {
-    padding: 2.5rem;
-    box-shadow: 0 0 4rem rgba(0, 0, 0, .05);
-    background-color: #fff;
-
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-
-    z-index: 100;
-
-    &__content {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    &__logo {
-        outline: none;
-        font-weight: 700;
-        font-size: 2.4rem;
-    
-        display: flex;
-        align-items: center;
-        
-        text-decoration: none;
-        color: #000;
-    }
-    
-    &__logo svg {
-        width: 2.5rem;
-        height: 2.5rem;
-        margin-right: 5px;
-    }
-    
-    &__cart {
-        display: flex;
-        align-items: center;
-    
-        outline: none;
-        border: none;
-        background-color: #fff;
-    
-        padding: 2rem;
-        cursor: pointer;
-    }
-    
-    &__price {
-        color: #0aa7f5;
-        font-weight: 700;
-        font-size: 1.6rem;
-        letter-spacing: 2px;
-    }
-    
-    &__cart svg {
-        height: 3.1rem;
-        width: 2.7rem;
-        margin-right: 1rem;
-    }
-}
-
+@import url("./components/_buttons.scss");
+@import url("./components/_header.scss");
