added error handling on home page

--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,7 @@ include includes/components/_head
 include includes/pages/_checkout
 include includes/components/_cart-summary
 include includes/components/_header
-p.error.error--hidden Something went wrong
+p.error.error--hidden
 main.container
   .loader-container
     .loader
