added valid options to checkout select

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -146,7 +146,8 @@
     font-weight: 200;
 }
 
-.checkout__form-group input{
+.checkout__form-group input,
+.checkout__form-group select{
     font-family: inherit;
     font-size: 1.8rem;
     padding: 1rem 1.6rem;
