--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -12,7 +12,9 @@
 
 /* --------------------- RESETS ------------------------- */
 
-* {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
