--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    padding: 2.5rem;
+    padding: 2.5rem 0;
     box-shadow: 0 0 4rem rgba(0, 0, 0, .05);
     background-color: #fff;
 
@@ -18,7 +18,7 @@
     &__logo {
         outline: none;
         font-weight: 700;
-        font-size: 2.4rem;
+        font-size: clamp(2rem,2.5vw,2.4rem);
     
         display: flex;
         align-items: center;
