--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -3,6 +3,7 @@
 @import url("./_layout.scss");
 @import url("./_typography.scss");
 @import url("./_utilities.scss");
+@import url('./components/_card.scss');
 
 /* --------------------- CHECKOUT ------------------------- */
 
@@ -26,10 +27,6 @@
 /* .checkout ~ * {
     display: none;
 } */
-
-.hidden {
-    display: none;
-}
 
 .checkout__container {
     width: 80vw;
@@ -582,121 +579,7 @@
     align-items: center
 }
 
-#card-frame {
-    grid-column: 1 / -1;
-}
 
-/* --------------------- CARD ------------------------- */
-
-.card {
-    display: grid;
-    grid-template-columns: 55% 1fr;
-    grid-template-rows: max-content repeat(2,min-content);
-    grid-gap: 2rem;
-
-    margin: 10rem 0 15rem 0;
-}
-
-.card--left {
-    grid-template-columns: 1fr 55%;
-}
-
-.card__heading {
-    font-size: 4rem;
-}
-
-.card__description {
-    font-size: 2rem;
-    align-self: center;
-}
-
-
-.card__purchase-block {
-    display: grid;
-    align-self: start;
-    grid-template-columns: 35% 1fr;
-    grid-gap: 2rem;
-
-    width: 50%;
-}
-
-.card__input-group {
-    display: flex;
-    flex-direction: column;
-}
-
-.card__label {  
-    font-size: 1.2rem;
-    font-weight: 700;
-    color: #6b6b6b;
-    text-transform: uppercase;
-    margin-bottom: 5px;
-}
-
-.card__input {
-    padding: 8px 8px 8px 16px;
-    font-size: inherit;
-    font-family: inherit;
-}
-
-.card__image-box {
-    grid-column: 2;
-    grid-row: 1 / span 3;
-    max-width: 50rem;
-    max-height: 40rem;
-
-    border-radius: 5px;
-
-    transform-style: preserve-3d;
-    perspective: 65rem;
-}
-
-.card__image-box--left {
-    grid-column: 1;
-}
-
-.card__image{
-    display: block;
-    width: 100%;
-    height: 100%;   
-    border-radius: 5px;
-    transform: rotateY(-20deg) rotateX(-1.5deg) rotateZ(5deg);
-}
-
-.card__image--left{
-    transform: rotateY(20deg) rotateX(1.5deg) rotateZ(-5deg);
-}
-
-
-.card__price {
-    font-size: 2rem;
-    font-weight: 700;
-    align-self: center;
-}
-
-.card__btn {
-    border: none;
-    outline: none;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-size: 1.2rem;
-    font-weight: 700;
-    font-family: inherit;
-    /* background-color: #1a4db3; */
-    background-color: #113478;
-    padding: 1.6rem 2.4rem;
-    color: #fff;
-    border-radius: 3px;
-
-    transition: all .2s;
-}
-
-.card__btn:hover {
-    background-color:#1a4db3 ;
-    transform: translateY(-2px);
-    box-shadow: 0 2px 10px rgb(17 52 120 / 50%);
-
-}
 /* --------------------- LOADER ------------------------- */
 
 .spinner {
