fixed build issue

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -4,7 +4,7 @@
 @import url("./_typography.scss");
 @import url("./_utilities.scss");
 @import url('./components/_card.scss');
-@import url('./components/_loaders.scss');
+// @import url('./components/_loaders.scss');
 @import url('./components/_cart-summary.scss');
 
 .spinner {
