--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -32,3 +32,9 @@ body {
     font-size: 1.6rem;
     position: relative;
 }
+
+@media only screen and (max-width: 700px) {
+    html {
+        font-size: 50%;
+    }
+}
