--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -13,6 +13,7 @@
     border-radius:50%;
     background:conic-gradient(#0000 10%,#fff);
     -webkit-mask:radial-gradient(farthest-side,#0000 calc(100% - 5px),#000 0);
+    mask:radial-gradient(farthest-side,#0000 calc(100% - 5px),#000 0);
     animation:s3 .5s infinite linear;
   }
   @keyframes s3 {to{transform: rotate(1turn)}}
