fixed cart summary responsiveness

--- a/src/css/components/_cart-summary.scss
+++ b/src/css/components/_cart-summary.scss
@@ -6,7 +6,7 @@
     bottom: 0;
     right: 0;
     width: clamp(40rem,40vw,60rem);
-    min-height: 100vh;
+    height: 100vh;
 
     box-shadow: 0 2rem 10rem rgba(0, 0, 0, .1);
 
