--- a/src/css/components/_card.scss
+++ b/src/css/components/_card.scss
@@ -16,12 +16,11 @@
     }
     
     &__heading {
-        font-size: clamp(2.5rem,4vw,4rem);
+        font-size: clamp(3.5rem,4vw,4rem);
     }
     
     &__description {
-        // font-size: 2rem;
-        font-size: clamp(1.6rem,2vw,2rem);
+        font-size: 2rem;
         align-self: center;
     }
     
