--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -29,8 +29,9 @@ html {
 }
 
 body {
-    font-size: 1.6rem;
+    // font-size: 1.6rem;
     position: relative;
+    overflow-x: hidden;
 }
 
 @media only screen and (max-width: 700px) {
