--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -14,6 +14,18 @@
 }
 
 
+.footer {
+    border-top: solid 1px #ddd;
+    padding: clamp(1rem,5vw,5rem);
+    background-color: #fafafa;
+    border-top: 1px solid #eaeaea;
+
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+
+
 @media only screen and (max-width: 500px)  {
     .container, 
     .header__content,
