--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -68,9 +68,6 @@
     place-items: center;
 }
 
-.hidden {
-    display: none;
-}
 
 .loader-container {
     position: absolute;
@@ -144,8 +141,8 @@
     background-color: #fff;
     padding: 3rem 3rem;
     display: grid;
-    grid-column-gap: 3rem;
-    grid-template-columns: 1fr 20%;
+    // grid-column-gap: 3rem;
+    // grid-template-columns: 1fr 20%;
 
     position: relative;
 }
@@ -470,4 +467,30 @@
 }
 
 
+@media only screen and (max-width: 1000px) {
+    .checkout__container {
+        width: 90vw;
+    }
 
+    .order-summary {
+        width: 40vw;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .checkout__container {
+        justify-content: stretch;
+        grid-template-columns: auto;
+    }
+
+    .order-summary {
+        position: static;
+        grid-row: 1;
+        width: 100%;
+    }
+
+    .checkout__right {
+        grid-row: 2;
+        margin-bottom: 2rem;
+    }
+}
