--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -481,6 +481,8 @@
     .checkout__container {
         justify-content: stretch;
         grid-template-columns: auto;
+
+        padding-bottom: 5rem;
     }
 
     .order-summary {
