--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -34,38 +34,7 @@
     }
 
     .container {
-        padding-bottom: 5rem;
+        padding: 5rem;
     }
 }
 
-// @media only screen and (max-width: 1000px)  {
-//     .container, 
-//     .header__content,
-//     .footer__content {
-//         width: 80vw;
-//     }
-// }
-
-// @media only screen and (max-width: 800px)  {
-//     .container, 
-//     .header__content,
-//     .footer__content {
-//         width: 85vw;
-//     }
-
-//     .container {
-//         padding-bottom: 4rem;
-//     }
-// }
-
-// @media only screen and (max-width: 800px)  {
-//     .container, 
-//     .header__content,
-//     .footer__content {
-//         width: 85vw;
-//     }
-
-//     .container {
-//         padding-bottom: 4rem;
-//     }
-// }
